# tui-notes

./: .gitignore  CONTEXT.md  LICENSE  PLAN_01_PROJECT_SETUP.md  PLAN_02_BASIC_STRUCTURE.md  PLAN_03_EDIT_FUNCTIONALITY.md  PLAN_04_ADD_REMOVE.md  PLAN_05_MOVE_REORDER.md  PLAN_06_PERSISTENCE.md  PLAN_07_POLISH.md  PLAN_08_TESTING.md  PLAN_09_DEPLOYMENT.md  README.md  TODO.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  publish.yml
tests/: __init__.py  test_app.py  test_storage.py
tui_notes/: __init__.py  __main__.py  app.py  constants.py  storage.py  style.tcss
tui_notes/screens/: __init__.py  color_picker.py  confirm.py  edit_post_it.py  help.py
tui_notes/widgets/: __init__.py  empty_slot.py  post_it.py
