[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tui-notes"
version = "0.1.0"
description = "A terminal-based post-it notes application with a 3x3 grid layout"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Douglas" }
]
keywords = ["tui", "notes", "terminal", "textual", "post-it"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "textual-dev>=1.0.0",
]

[project.scripts]
tui-notes = "tui_notes.__main__:main"

[project.urls]
Homepage = "https://github.com/douglas/tui-notes"
Repository = "https://github.com/douglas/tui-notes"

[tool.hatch.build.targets.wheel]
packages = ["tui_notes"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.main]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "W0613",  # unused-argument
    "W0718",  # broad-exception-caught
]
max-line-length = 100

[tool.pylint."messages control"]
extension-pkg-whitelist = ["textual"]
